work in progress

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         <activity
             android:name=".activities.ChoosePlayersActivity"
             android:label="@string/title_activity_choose_players"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activities.OrderPlayersActivity"></activity>
     </application>
 
 </manifest>
