--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,20 +8,24 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.MainActivity">
+        <activity android:name=".activities.MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.PlayersActivity" />
-        <activity android:name=".activities.OpponentActivity" />
+        <activity android:name=".activities.PlayersActivity"  android:screenOrientation="portrait"/>
+        <activity android:name=".activities.OpponentActivity"  android:screenOrientation="portrait"/>
         <activity
             android:name=".activities.ChoosePlayersActivity"
             android:label="@string/title_activity_choose_players"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activities.OrderPlayersActivity"></activity>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.OrderPlayersActivity" android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activities.MatchActivity"
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
