Fixed bug where player score would be resetted if player was substituted

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
             android:screenOrientation="landscape" />
         <activity
             android:name=".activities.SubstitutePlayerActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
+        <activity android:name=".activities.ResumeGameActivity"></activity>
     </application>
 
 </manifest>
